Allow players with `tardis.create_world` permission to have a TARDIS in their own world when `default_world` is true
1. set `create_worlds: false`
2. set `create_worlds_with_perms: true`
3. set up default world as usual
4. give players permission `tardis.create_world`

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,6 +25,7 @@ timeout_height: 135
 name_tardis: false
 border_radius: 64
 create_worlds: true
+create_worlds_with_perms: false
 gamemode: survival
 materialise: true
 confirm_timeout: 15
