--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,14 @@
         <dependency>
             <groupId>com.massivecraft</groupId>
             <artifactId>factions</artifactId>
-            <version>1.8.2</version>
+            <version>2.0.5</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.massivecraft</groupId>
+            <artifactId>mcore</artifactId>
+            <version>6.6.0</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
