--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.eccentric_nz.TARDIS</groupId>
     <artifactId>TARDIS</artifactId>
-    <version>2.5.7</version>
+    <version>2.5.8</version>
     <name>TARDIS</name>
     <url>http://eccentricdevotion.github.com/TARDIS/</url>
     <repositories>
@@ -161,7 +161,7 @@
         <dependency>
             <groupId>net.citizensnpcs</groupId>
             <artifactId>citizensapi</artifactId>
-            <version>2.0.9-SNAPSHOT</version>
+            <version>2.0.9-beta-1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
